# cleanup-taskbar

./: Cargo.toml  README.md  cleanup-taskbar.code-workspace  cleanup-taskbar.ps1  cleanup-taskbar.xml
.cargo/: config.toml
src/: buffer.rs  fs.rs  main.rs  process.rs
